details for tool bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_favorites">Petagram - Favorites</string>
     <string name="btn_enter">Enter Puppy</string>
     <string name="action_favorites">Favorites</string>
+    <string name="action_other">Other Menu</string>
 </resources>
